--- a/src/tools/postgresql/psqledit/changelog.txt
+++ b/src/tools/postgresql/psqledit/changelog.txt
@@ -885,10 +885,10 @@ ver.5.4.0.9 (2025-05-07)
 ・利用しているオープンソースのライセンス情報を追加 (doc\credits.txt)
 ・ヘルプ→Creditsメニューを追加 (doc\credits.txtを表示)
 
----------------------------------------
-
-ver.6.0.0.0 (2025-05-)
+ver.6.0.0.0 (2025-06-09)
 ・64bit対応
 ・ソースコードをUTF8に変更
+
+---------------------------------------
 
 
