--- a/src/tools/postgresql/psqlgrid/Changelog.txt
+++ b/src/tools/postgresql/psqlgrid/Changelog.txt
@@ -251,12 +251,10 @@ ver.4.4.0.7 (2025-05-07)
 ・利用しているオープンソースのライセンス情報を追加 (doc\credits.txt)
 ・ヘルプ→Creditsメニューを追加 (doc\credits.txtを表示)
 
-
----------------------------------------
-
-ver.5.0.0.0 (2025-05-)
+ver.5.0.0.0 (2025-06-09)
 ・64bit対応
 ・ソースコードをUTF8に変更
 
+---------------------------------------
 
 
