Adjust layout of column width dialog and set initial width to the leftmost cell when multiple cells are selected.

--- a/src/tools/postgresql/psqlgrid/Changelog.txt
+++ b/src/tools/postgresql/psqlgrid/Changelog.txt
@@ -256,5 +256,11 @@ ver.5.0.0.0 (2025-06-09)
 ・ソースコードをUTF8に変更
 
 ---------------------------------------
+以下は未リリース
+
+ver.5.0.0.1 (2025-06-)
+・列幅調整ダイアログのレイアウト調整
+・列幅調整ダイアログで、複数セルを選択中のときは一番左のセル幅を初期表示するようにした
+
 
 
