--- a/src/tools/postgresql/psqledit/changelog.txt
+++ b/src/tools/postgresql/psqledit/changelog.txt
@@ -889,10 +889,12 @@ ver.6.0.0.0 (2025-06-09)
 ・64bit対応
 ・ソースコードをUTF8に変更
 
----------------------------------------
-以下は未リリース
-
-ver.6.0.0.1 (2025-06-)
+ver.6.0.0.1 (2025-06-15)
+・オブジェクトリストでテーブル名をダブルクリックしたとき、search_pathにない場合は、nspname.table_nameで
+　エディタに挿入するようにした
 ・列幅調整ダイアログのレイアウト調整
 ・列幅調整ダイアログで、複数セルを選択中のときは一番左のセル幅を初期表示するようにした
+
+---------------------------------------
+以下は未リリース
 
