--- a/src/tools/postgresql/psqlgrid/Changelog.txt
+++ b/src/tools/postgresql/psqlgrid/Changelog.txt
@@ -255,12 +255,13 @@ ver.5.0.0.0 (2025-06-09)
 ・64bit対応
 ・ソースコードをUTF8に変更
 
+ver.5.0.0.1 (2025-06-15)
+・列幅調整ダイアログのレイアウト調整
+・列幅調整ダイアログで、複数セルを選択中のときは一番左のセル幅を初期表示するようにした
+
 ---------------------------------------
 以下は未リリース
 
-ver.5.0.0.1 (2025-06-)
-・列幅調整ダイアログのレイアウト調整
-・列幅調整ダイアログで、複数セルを選択中のときは一番左のセル幅を初期表示するようにした
 
 
 
