Add sys-getenv to scheme macro

--- a/src/tools/postgresql/psqledit/changelog.txt
+++ b/src/tools/postgresql/psqledit/changelog.txt
@@ -898,3 +898,6 @@ ver.6.0.0.1 (2025-06-15)
 ---------------------------------------
 以下は未リリース
 
+ver.6.0.0.2 (2025-06-)
+・schemeマクロにsys-getenvを追加
+
