--- a/src/tools/postgresql/psqlgrid/Changelog.txt
+++ b/src/tools/postgresql/psqlgrid/Changelog.txt
@@ -262,6 +262,8 @@ ver.5.0.0.1 (2025-06-15)
 ---------------------------------------
 以下は未リリース
 
+ver.5.0.0.2 (2025-06-)
+・schemeマクロにsys-getenvを追加
 
 
 
