オブジェクトリストのタイプに「TABLE|VIEW」を追加

--- a/src/tools/postgresql/psqledit/changelog.txt
+++ b/src/tools/postgresql/psqledit/changelog.txt
@@ -895,9 +895,10 @@ ver.6.0.0.1 (2025-06-15)
 ・列幅調整ダイアログのレイアウト調整
 ・列幅調整ダイアログで、複数セルを選択中のときは一番左のセル幅を初期表示するようにした
 
----------------------------------------
-以下は未リリース
-
-ver.6.0.0.2 (2025-06-)
+ver.6.0.0.2 (2025-09-15)
+・オブジェクトリストのtypeの選択肢に「TABLE|VIEW」を追加 (TABLEとVIEWの両方を表示)
 ・schemeマクロにsys-getenvを追加
 
+
+---------------------------------------
+以下は未リリース
