開発環境をVisual Studio 2026に移行

--- a/src/tools/postgresql/psqledit/changelog.txt
+++ b/src/tools/postgresql/psqledit/changelog.txt
@@ -902,3 +902,15 @@ ver.6.0.0.2 (2025-09-15)
 
 ---------------------------------------
 以下は未リリース
+
+
+//
+・libpqのinclude fileを追加
+  libpq-fe.h
+  postgres_ext.h
+  pg_config_ext.h
+
+・psqlgrid
+  保存前にSQLを取得できるようにする
+  入力サポート　カレンダー、プルダウンなど
+
